--- a/techio.yml
+++ b/techio.yml
@@ -1,11 +1,11 @@
-title : React Project
+title : Test React Component and JSX
 
 # Table of content
 plan:
-  - title: Welcome # Set the page title (only displayed if your contribution has several pages)
-    statement: markdowns/welcome.md # Set the file path to the page content
-#  - title: Another Page
-#    statement: markdowns/another-page.md
+  - title: Test about components # Set the page title (only displayed if your contribution has several pages)
+    statement: markdowns/components.md # Set the file path to the page content
+  - title: Test about jsx
+    statement: markdowns/jsx.md
 
 
 # Settings for your programming projects and the associated Docker images
